# Projeto_Enem_Data_Robotics_V2

./: .dockerignore  .gitignore  AGENTS.md  Ciberseguranca-e-Escalabilidade.md  Dockerfile  GEMINI.md  README.md  debug_2009.py  debug_backend_query.py  debug_check_nulls.py  debug_check_nulls_muni.py  debug_db.py  debug_db_schema.py  debug_partial.py  debug_race_2023.py  debug_race_data.py  docker-compose.e2e.yml  docker-compose.frontend-test.yml  docker-compose.test.yml  docker-compose.yml  login-autenticacao.md  package-lock.json  pyproject.toml  run_docker.sh  saida.txt
.docker_isolation/: .token_seed  config.json
.docker_isolation/buildx/: .buildNodeID  current
.docker_isolation/buildx/activity/: default
.github/workflows/: ci.yml
Enem_documentos_e_orquestração/: algoritmos_automacao_e_testes_de_dados_profissionais.md  arquitetura_enem_data_robotics.md  arquitetura_projeto_enem_data_robotics.md  checklist_backend_enem_media_uf.md  checklist_producao_segura_escalavel.md  checklist_staff_engineer_enem_media_uf.md  engenharia_frontend_profissional.md  guia_avancado_de_engenharia_de_dados_para_ciencia_de_dados.md  guia_avancado_de_engenharia_de_software_para_ciencia_de_dados.md  guia_orquestrado_mcp_para_projetos_de_ciencia_de_dados.md  orquestracao_e_agentes_sql_projetos_ciencia_dados.md  orquestracao_fluxo_backend_ciencia_dados_dashboard.md  orquestrador_qualidade_nativa_ds_ia_seguranca.md  plano_engenharia_enem_media_uf.md
config/: faixas_media.yaml  hardware.py
dashboard/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
dashboard/e2e/: navigation.spec.ts  security.spec.ts
dashboard/playwright-report/: index.html
dashboard/public/: br-states.json
dashboard/src/: App.tsx  index.css  main.tsx  polyfills.ts
dashboard/src/api/: client.ts  dashboard.ts
dashboard/test-results/: .last-run.json
scripts/: docker-cleanup.sh
src/enem_project/: cli.py
tests/: fix_categorical_repro.py  test_api_dashboard_core.py  test_api_integration.py  test_api_media_municipal.py  test_auth.py  test_cleaning_and_class.py  test_data_pipelines.py  test_media_municipal.py  test_quality_audit.py  test_security_engineering.py  test_socioeconomic_pipeline.py  test_sql_backend_data_quality.py
(+102 files in other folders)
