[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enem_project"
version = "0.1.0"
description = "Projeto ENEM Data Robotics"
requires-python = ">=3.12"

dependencies = [
  "pandas>=2.0",
  "pyarrow>=15.0",
  "duckdb>=1.0",
  "loguru>=0.7",
  "tqdm>=4.0",
  "typer>=0.9",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "google-generativeai (>=0.8.5,<0.9.0)",
  "python-dotenv (>=1.2.1,<2.0.0)",
  "soda-core (>=3.5.6,<4.0.0)",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
enem = "enem_project.cli:main"
