[tool.poetry]
name = "enem_project"
version = "0.1.0"
description = "Projeto ENEM Data Robotics"
authors = ["Douglas <douglas@example.com>"]
readme = "README.md"
packages = [{include = "enem_project", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pandas = ">=2.0"
pyarrow = ">=15.0"
duckdb = ">=1.0"
loguru = ">=0.7"
tqdm = ">=4.0"
typer = ">=0.9"
fastapi = ">=0.110"
uvicorn = {extras = ["standard"], version = ">=0.27"}
pydantic = ">=2.0"
google-generativeai = ">=0.8.5,<0.9.0"
python-dotenv = ">=1.2.1,<2.0.0"
soda-core = ">=3.5.6,<4.0.0"
slowapi = "^0.1.9"
weasyprint = ">=61.0"
xlsxwriter = "^3.2.9"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.5"

[tool.poetry.scripts]
enem = "enem_project.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"